--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "method-override": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
