--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
+    "nodemailer": "^6.9.3",
     "sequelize": "^6.30.0"
   },
   "devDependencies": {
