--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DB_DATABASE=concesionarias2
 DB_PORT=3306
 DB_HOST=127.0.0.7
 PORT=8080
+EMAIL_NODEMAILER=sebastos23@gmail.com
+PASS_NODEMAILER=omlzvmniogukateq
